# webharvest

./: .gitignore  BUILD.md  DESIGN_BRIEF.md  DESIGN_TOKENS.json  IMPLEMENTATION_BRIEF.md  Package.swift  README.md  TECH_DECISIONS.md
.build/: build.db  plugin-tools.yaml  release.yaml
.build/arm64-apple-macosx/release/: WebHarvest  description.json  plugin-tools-description.json
.build/arm64-apple-macosx/release/Modules/: WebHarvest.swiftdoc  WebHarvest.swiftmodule  WebHarvest.swiftsourceinfo
.build/arm64-apple-macosx/release/WebHarvest.build/: WebHarvest.d  WebHarvest.dia  output-file-map.json  sources
.build/arm64-apple-macosx/release/WebHarvest.product/: Objects.LinkFileList
.github/workflows/: ci.yml  release.yml
.workbuddy/memory/: 2026-06-30.md
PythonCore/: pyproject.toml
PythonCore/tests/: test_smoke.py
PythonCore/webharvest/: __init__.py  __main__.py  cli.py  config.py  protocol.py
PythonCore/webharvest/crawler/: __init__.py  browser.py  spider.py  url_frontier.py
PythonCore/webharvest/downloader/: __init__.py  fetcher.py
PythonCore/webharvest/extractors/: __init__.py
SwiftApp/Resources/: Info.plist
SwiftApp/Sources/App/: AppState.swift  ContentView.swift  FileType.swift  WebHarvestApp.swift  WindowAccessor.swift
SwiftApp/Sources/Bridge/: CrawlerMessages.swift  CrawlerProcess.swift
SwiftApp/Sources/Components/: Color+Tokens.swift
SwiftApp/Sources/Modules/: Module.swift  ModuleTabBarView.swift  TitleBarView.swift
SwiftApp/Sources/Modules/SiteCrawler/: ActionRowView.swift  InputCardView.swift  LogPanel.swift  SiteCrawlerView.swift  (+3 more)
(+161 files in other folders)
