[project]
name = "webharvest"
version = "0.1.0"
description = "Site asset crawler for the WebHarvest macOS app"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "selectolax>=0.3.7",
    "tldextract>=5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webharvest"]
